fix text alignment

--- a/projects/app/src/global.css
+++ b/projects/app/src/global.css
@@ -30,12 +30,15 @@
   .pyly-body-title {
     @apply font-sans text-2xl/normal tracking-tight text-fg font-bold;
   }
+  .pyly-body-title.pyly-ref,
   .pyly-body-title .pyly-ref {
     @apply leading-tight font-bold text-fg-loud pyly-ref-2xl;
   }
+  .pyly-body-title.pyly-bold,
   .pyly-body-title .pyly-bold {
     @apply font-bold text-fg-loud;
   }
+  .pyly-body-title.pyly-mark,
   .pyly-body-title .pyly-mark {
     @apply font-extrabold text-yellow;
   }
@@ -46,12 +49,15 @@
   .pyly-body-heading {
     @apply font-sans text-lg/normal tracking-tight text-fg-loud font-bold;
   }
+  .pyly-body-heading.pyly-ref,
   .pyly-body-heading .pyly-ref {
     @apply font-bold text-fg-loud pyly-ref-lg;
   }
+  .pyly-body-heading .pyly-bold,
   .pyly-body-heading .pyly-bold {
     @apply font-bold text-fg-loud;
   }
+  .pyly-body-heading.pyly-mark,
   .pyly-body-heading .pyly-mark {
     @apply font-bold text-yellow;
   }
@@ -61,12 +67,15 @@
   .pyly-body-2xl {
     @apply font-sans text-2xl/normal font-normal text-fg;
   }
+  .pyly-body-2xl.pyly-ref,
   .pyly-body-2xl .pyly-ref {
     @apply font-medium text-fg-loud pyly-ref-2xl;
   }
+  .pyly-body-2xl.pyly-bold,
   .pyly-body-2xl .pyly-bold {
     @apply font-medium text-fg-loud;
   }
+  .pyly-body-2xl.pyly-mark,
   .pyly-body-2xl .pyly-mark {
     @apply font-medium text-yellow;
   }
@@ -76,12 +85,15 @@
   .pyly-body {
     @apply font-sans text-base/normal text-fg font-medium;
   }
+  .pyly-body.pyly-ref,
   .pyly-body .pyly-ref {
     @apply text-fg-loud font-medium pyly-ref-base;
   }
+  .pyly-body.pyly-bold,
   .pyly-body .pyly-bold {
     @apply font-bold text-fg-loud;
   }
+  .pyly-body.pyly-mark,
   .pyly-body .pyly-mark {
     @apply font-semibold text-yellow;
   }
@@ -91,15 +103,19 @@
   .pyly-body-caption {
     @apply font-sans text-sm/normal font-normal text-caption;
   }
+  .pyly-body-caption.pyly-ref,
   .pyly-body-caption .pyly-ref {
     @apply text-caption-loud font-medium pyly-ref-sm;
   }
+  .pyly-body-caption.pyly-bold,
   .pyly-body-caption .pyly-bold {
     @apply text-caption-loud font-medium;
   }
+  .pyly-body-caption.pyly-mark,
   .pyly-body-caption .pyly-mark {
     @apply text-yellow font-semibold;
   }
+  .pyly-body-caption.pyly-italic,
   .pyly-body-caption .pyly-italic {
     @apply font-light;
   }
@@ -109,12 +125,15 @@
   .pyly-body-dt {
     @apply font-sans text-xs/normal font-medium text-caption uppercase;
   }
+  .pyly-body-dt.pyly-ref,
   .pyly-body-dt .pyly-ref {
     @apply text-fg-loud font-semibold pyly-ref-xs;
   }
+  .pyly-body-dt.pyly-bold,
   .pyly-body-dt .pyly-bold {
     @apply font-semibold text-fg-loud;
   }
+  .pyly-body-dt.pyly-mark,
   .pyly-body-dt .pyly-mark {
     @apply font-semibold text-yellow;
   }
@@ -124,12 +143,15 @@
   .pyly-body-input {
     @apply font-sans text-lg/snug font-medium text-fg;
   }
+  .pyly-body-input.pyly-ref,
   .pyly-body-input .pyly-ref {
     @apply text-fg-loud font-semibold pyly-ref-lg;
   }
+  .pyly-body-input.pyly-bold,
   .pyly-body-input .pyly-bold {
     @apply font-semibold text-fg-loud;
   }
+  .pyly-body-input.pyly-mark,
   .pyly-body-input .pyly-mark {
     @apply font-semibold text-yellow;
   }
